--- a/public/config.json
+++ b/public/config.json
@@ -248,14 +248,14 @@
     }
   },
   "421613": {
-    "referral_storage": "0x7Fd89bE6309Dcb7E147D172E73F04b52cee6313a",
-    "router": "0x2d44Df5d4106C0C62893606E8956443DcA3a4Da2",
+    "marketFactory": "0x4ffb103F4Cfa8eF4a72227799c325DA53341Da59",
+    "referral_storage": "0x6f4ECcB5d1441854ac130D03Cd83895ad5EB8d04",
+    "router": "0x76c52E83d7dcCc70107a66BAd44D042D22D06be7",
     "multicall": "0xca11bde05977b3631167028862be2a173976ca11",
-    "creation_window": "0x72b9de12C4FBBAc17f3394F7EA3aDE315d83C7c1",
     "tokens": {
       "USDC": {
-        "address": "0x4B5ed6b788e22D7bBe4790A4D6bE8f3A3FFC470E",
-        "meta": "0xC33A64475f84C88DfB139fcFF29642a055587fe4",
+        "address": "0x658e6B62e7ab1d2B29a08F85f8442edEed562b48",
+        "meta": "0xaB9Babe3A7445333d8c2BAA0A5bF749cF37096b5",
         "decimals": 6,
         "img": "https://res.cloudinary.com/dtuuhbeqt/image/upload/v1684085945/usdc.png",
         "name": "USDC",
@@ -427,8 +427,8 @@
       }
     ],
     "graph": {
-      "MAIN": "https://subgraph.satsuma-prod.com/e66b06ce96d2/bufferfinance/instant-trading-arbitrum-testnet/api",
-      "LITE": "https://subgraph.satsuma-prod.com/e66b06ce96d2/bufferfinance/instant-trading-arbitrum-testnet/api"
+      "MAIN": "https://subgraph.satsuma-prod.com/e66b06ce96d2/bufferfinance/testnet-dummy/api",
+      "LITE": "https://subgraph.satsuma-prod.com/e66b06ce96d2/bufferfinance/testnet-dummy/api"
     },
     "env": "arbitrum-testnet"
   },
