--- a/src/Views/AdminConfigs/AdminConfigs.json
+++ b/src/Views/AdminConfigs/AdminConfigs.json
@@ -9,8 +9,7 @@
   },
   "options_config": {
     "setBoosterContract": {
-      "getter": "boosterContract",
-      "decimal": 8
+      "getter": "boosterContract"
     },
     "setCreationWindowContract": {
       "getter": "creationWindowContract",
@@ -18,51 +17,45 @@
     },
     "setMinFee": {
       "getter": "minFee",
-      "decimal": 8
+      "decimal": "token"
     },
     "setIV": {
       "getter": "iv",
-      "decimal": 8
+      "decimal": 4
     },
     "setPlatformFee": {
       "getter": "platformFee",
-      "decimal": 8
+      "decimal": "token"
     },
     "setSettlementFeeDisbursalContract": {
-      "getter": "settlementFeeDisbursalContract",
-      "decimal": 8
+      "getter": "settlementFeeDisbursalContract"
     },
     "setOptionStorageContract": {
-      "getter": "optionStorageContract",
-      "decimal": 8
+      "getter": "optionStorageContract"
     },
     "setMaxPeriod": {
       "getter": "maxPeriod",
-      "decimal": 8
+      "hint": "in seconds"
     },
     "setPoolOIStorageContract": {
-      "getter": "poolOIStorageContract",
-      "decimal": 8
+      "getter": "poolOIStorageContract"
     },
     "setPoolOIConfigContract": {
-      "getter": "poolOIConfigContract",
-      "decimal": 8
+      "getter": "poolOIConfigContract"
     },
     "setMarketOIConfigContract": {
-      "getter": "marketOIConfigContract",
-      "decimal": 8
+      "getter": "marketOIConfigContract"
     },
     "setEarlyCloseThreshold": {
       "getter": "earlyCloseThreshold",
-      "decimal": 8
+      "hint": "in seconds"
     },
     "toggleEarlyClose": {
-      "getter": "isEarlyCloseAllowed",
-      "decimal": 8
+      "getter": "isEarlyCloseAllowed"
     },
     "setMinPeriod": {
       "getter": "minPeriod",
-      "decimal": 8
+      "hint": "in seconds"
     }
   },
   "pool": {
