--- a/src/Views/AdminConfigs/AdminConfigs.json
+++ b/src/Views/AdminConfigs/AdminConfigs.json
@@ -61,7 +61,7 @@
   "pool": {
     "setMaxLiquidity": {
       "getter": "maxLiquidity",
-      "decimal": 9
+      "decimal": "token"
     }
   },
   "options": {
