--- a/src/Views/AdminConfigs/AdminConfigs.json
+++ b/src/Views/AdminConfigs/AdminConfigs.json
@@ -75,6 +75,10 @@
     },
     "setPrice": {
       "getter": "couponPrice"
+    },
+    "setBoostPercentage": {
+      "getter": "boostPercentage",
+      "decimal": 2
     }
   },
   "pooloi": {
