--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@thirdweb-dev/sdk": "^3.6.9",
     "@types/react": "^17.0.38",
     "@vercel/analytics": "^0.1.8",
+    "@wagmi/core": "^1.3.8",
     "@web3-react/abstract-connector": "latest",
     "@web3-react/authereum-connector": "latest",
     "@web3-react/core": "^6.1.9",
