--- a/src/Views/AdminConfigs/AdminConfigs.json
+++ b/src/Views/AdminConfigs/AdminConfigs.json
@@ -1,12 +1,4 @@
 {
-  "router": {
-    "setContractRegistry": {
-      "getter": "contractRegistry"
-    },
-    "setKeeper": {
-      "getter": "isKeeper"
-    }
-  },
   "options_config": {
     "setBoosterContract": {
       "getter": "boosterContract"
@@ -88,10 +80,12 @@
   },
   "marketoi": {
     "setMaxMarketOI": {
-      "decimals": 2
+      "getter": "_maxMarketOI",
+      "decimal": "token"
     },
     "setMaxTradeSize": {
-      "decimals": 2
+      "getter": "_maxTradeSize",
+      "decimal": "token"
     }
   }
 }
