--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
     "@web3-react/injected-connector": "^6.0.7",
     "@web3-react/walletconnect-connector": "6.2.4",
     "add": "^2.0.6",
-    "aws-sdk": "^2.1236.0",
     "axios": "^0.26.0",
     "axios-retry": "^3.3.1",
     "big.js": "^6.1.1",
@@ -96,6 +95,8 @@
   },
   "devDependencies": {
     "@lingui/cli": "^4.2.0",
+    "cypress": "^12.17.3",
+    "cypress-vite": "^1.4.2",
     "@lingui/vite-plugin": "^4.2.0",
     "@types/big.js": "^6.1.6",
     "@types/react": "^18.0.24",
@@ -106,6 +107,7 @@
     "eslint": "8.32.0",
     "postcss": "^8.4.19",
     "prettier": "^2.8.3",
+    "hardhat": "^2.17.1",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.6.4",
     "vite": "^3.2.3",
