--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@mui/lab": "^5.0.0-alpha.67",
     "@mui/material": "^5.3.1",
     "@mui/styles": "^5.3.0",
+    "@particle-network/auth": "^1.0.2",
+    "@particle-network/rainbowkit-ext": "^1.0.2",
     "@polyjuice-provider/web3": "^0.1.2",
     "@pythnetwork/client": "^2.17.0",
     "@rainbow-me/rainbowkit": "^1.0.7",
