--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@polyjuice-provider/web3": "^0.1.2",
     "@pythnetwork/client": "^2.17.0",
     "@rainbow-me/rainbowkit": "^1.0.7",
+    "@safe-global/safe-apps-react-sdk": "^4.7.0",
     "@sentry/react": "^7.58.1",
     "@synthetixio/synpress": "^1.2.0",
     "@szhsin/react-menu": "^3.5.3",
