--- a/src/ABIs/ABI/configABI.json
+++ b/src/ABIs/ABI/configABI.json
@@ -86,12 +86,38 @@
     "inputs": [
       {
         "indexed": false,
-        "internalType": "uint256",
+        "internalType": "uint32",
         "name": "_iv",
-        "type": "uint256"
+        "type": "uint32"
       }
     ],
     "name": "UpdateIV",
+    "type": "event"
+  },
+  {
+    "anonymous": false,
+    "inputs": [
+      {
+        "indexed": false,
+        "internalType": "uint256",
+        "name": "ivFactorITM",
+        "type": "uint256"
+      }
+    ],
+    "name": "UpdateIVFactorITM",
+    "type": "event"
+  },
+  {
+    "anonymous": false,
+    "inputs": [
+      {
+        "indexed": false,
+        "internalType": "uint256",
+        "name": "ivFactorOTM",
+        "type": "uint256"
+      }
+    ],
+    "name": "UpdateIVFactorOTM",
     "type": "event"
   },
   {
@@ -126,19 +152,6 @@
       {
         "indexed": false,
         "internalType": "uint256",
-        "name": "maxSafeStrikePercent",
-        "type": "uint256"
-      }
-    ],
-    "name": "UpdateMaxSafeStrikePercent",
-    "type": "event"
-  },
-  {
-    "anonymous": false,
-    "inputs": [
-      {
-        "indexed": false,
-        "internalType": "uint256",
         "name": "value",
         "type": "uint256"
       }
@@ -157,19 +170,6 @@
       }
     ],
     "name": "UpdateMinPeriod",
-    "type": "event"
-  },
-  {
-    "anonymous": false,
-    "inputs": [
-      {
-        "indexed": false,
-        "internalType": "uint256",
-        "name": "minSafeStrikePercent",
-        "type": "uint256"
-      }
-    ],
-    "name": "UpdateMinSafeStrikePercent",
     "type": "event"
   },
   {
@@ -242,6 +242,45 @@
     "inputs": [
       {
         "indexed": false,
+        "internalType": "uint256",
+        "name": "spreadConfig1",
+        "type": "uint256"
+      }
+    ],
+    "name": "UpdateSpreadConfig1",
+    "type": "event"
+  },
+  {
+    "anonymous": false,
+    "inputs": [
+      {
+        "indexed": false,
+        "internalType": "uint256",
+        "name": "spreadConfig2",
+        "type": "uint256"
+      }
+    ],
+    "name": "UpdateSpreadConfig2",
+    "type": "event"
+  },
+  {
+    "anonymous": false,
+    "inputs": [
+      {
+        "indexed": false,
+        "internalType": "uint32",
+        "name": "ivFactorOTM",
+        "type": "uint32"
+      }
+    ],
+    "name": "UpdateSpreadFactor",
+    "type": "event"
+  },
+  {
+    "anonymous": false,
+    "inputs": [
+      {
+        "indexed": false,
         "internalType": "address",
         "name": "value",
         "type": "address"
@@ -272,6 +311,13 @@
     "type": "function"
   },
   {
+    "inputs": [{ "internalType": "bool", "name": "isITM", "type": "bool" }],
+    "name": "getFactoredIv",
+    "outputs": [{ "internalType": "uint32", "name": "", "type": "uint32" }],
+    "stateMutability": "view",
+    "type": "function"
+  },
+  {
     "inputs": [],
     "name": "isEarlyCloseAllowed",
     "outputs": [{ "internalType": "bool", "name": "", "type": "bool" }],
@@ -281,7 +327,21 @@
   {
     "inputs": [],
     "name": "iv",
-    "outputs": [{ "internalType": "uint256", "name": "", "type": "uint256" }],
+    "outputs": [{ "internalType": "uint32", "name": "", "type": "uint32" }],
+    "stateMutability": "view",
+    "type": "function"
+  },
+  {
+    "inputs": [],
+    "name": "ivFactorITM",
+    "outputs": [{ "internalType": "uint32", "name": "", "type": "uint32" }],
+    "stateMutability": "view",
+    "type": "function"
+  },
+  {
+    "inputs": [],
+    "name": "ivFactorOTM",
+    "outputs": [{ "internalType": "uint32", "name": "", "type": "uint32" }],
     "stateMutability": "view",
     "type": "function"
   },
@@ -301,13 +361,6 @@
   },
   {
     "inputs": [],
-    "name": "maxSafeStrikePercent",
-    "outputs": [{ "internalType": "uint256", "name": "", "type": "uint256" }],
-    "stateMutability": "view",
-    "type": "function"
-  },
-  {
-    "inputs": [],
     "name": "minFee",
     "outputs": [{ "internalType": "uint256", "name": "", "type": "uint256" }],
     "stateMutability": "view",
@@ -317,13 +370,6 @@
     "inputs": [],
     "name": "minPeriod",
     "outputs": [{ "internalType": "uint32", "name": "", "type": "uint32" }],
-    "stateMutability": "view",
-    "type": "function"
-  },
-  {
-    "inputs": [],
-    "name": "minSafeStrikePercent",
-    "outputs": [{ "internalType": "uint256", "name": "", "type": "uint256" }],
     "stateMutability": "view",
     "type": "function"
   },
@@ -422,8 +468,26 @@
     "type": "function"
   },
   {
-    "inputs": [{ "internalType": "uint256", "name": "_iv", "type": "uint256" }],
+    "inputs": [{ "internalType": "uint32", "name": "_iv", "type": "uint32" }],
     "name": "setIV",
+    "outputs": [],
+    "stateMutability": "nonpayable",
+    "type": "function"
+  },
+  {
+    "inputs": [
+      { "internalType": "uint32", "name": "_ivFactorITM", "type": "uint32" }
+    ],
+    "name": "setIVFactorITM",
+    "outputs": [],
+    "stateMutability": "nonpayable",
+    "type": "function"
+  },
+  {
+    "inputs": [
+      { "internalType": "uint32", "name": "_ivFactorOTM", "type": "uint32" }
+    ],
+    "name": "setIVFactorOTM",
     "outputs": [],
     "stateMutability": "nonpayable",
     "type": "function"
@@ -452,19 +516,6 @@
   },
   {
     "inputs": [
-      {
-        "internalType": "uint256",
-        "name": "_maxSafeStrikePercent",
-        "type": "uint256"
-      }
-    ],
-    "name": "setMaxSafeStrikePercent",
-    "outputs": [],
-    "stateMutability": "nonpayable",
-    "type": "function"
-  },
-  {
-    "inputs": [
       { "internalType": "uint256", "name": "_minFee", "type": "uint256" }
     ],
     "name": "setMinFee",
@@ -477,19 +528,6 @@
       { "internalType": "uint32", "name": "_minPeriod", "type": "uint32" }
     ],
     "name": "setMinPeriod",
-    "outputs": [],
-    "stateMutability": "nonpayable",
-    "type": "function"
-  },
-  {
-    "inputs": [
-      {
-        "internalType": "uint256",
-        "name": "_minSafeStrikePercent",
-        "type": "uint256"
-      }
-    ],
-    "name": "setMinSafeStrikePercent",
     "outputs": [],
     "stateMutability": "nonpayable",
     "type": "function"
@@ -556,9 +594,57 @@
     "type": "function"
   },
   {
+    "inputs": [
+      { "internalType": "uint256", "name": "_spreadConfig1", "type": "uint256" }
+    ],
+    "name": "setSpreadConfig1",
+    "outputs": [],
+    "stateMutability": "nonpayable",
+    "type": "function"
+  },
+  {
+    "inputs": [
+      { "internalType": "uint256", "name": "_spreadConfig2", "type": "uint256" }
+    ],
+    "name": "setSpreadConfig2",
+    "outputs": [],
+    "stateMutability": "nonpayable",
+    "type": "function"
+  },
+  {
+    "inputs": [
+      { "internalType": "uint32", "name": "_spreadFactor", "type": "uint32" }
+    ],
+    "name": "setSpreadFactor",
+    "outputs": [],
+    "stateMutability": "nonpayable",
+    "type": "function"
+  },
+  {
     "inputs": [],
     "name": "settlementFeeDisbursalContract",
     "outputs": [{ "internalType": "address", "name": "", "type": "address" }],
+    "stateMutability": "view",
+    "type": "function"
+  },
+  {
+    "inputs": [],
+    "name": "spreadConfig1",
+    "outputs": [{ "internalType": "uint256", "name": "", "type": "uint256" }],
+    "stateMutability": "view",
+    "type": "function"
+  },
+  {
+    "inputs": [],
+    "name": "spreadConfig2",
+    "outputs": [{ "internalType": "uint256", "name": "", "type": "uint256" }],
+    "stateMutability": "view",
+    "type": "function"
+  },
+  {
+    "inputs": [],
+    "name": "spreadFactor",
+    "outputs": [{ "internalType": "uint32", "name": "", "type": "uint32" }],
     "stateMutability": "view",
     "type": "function"
   },
