add fields to config admin

--- a/src/Views/AdminConfigs/AdminConfigs.json
+++ b/src/Views/AdminConfigs/AdminConfigs.json
@@ -56,6 +56,12 @@
     },
     "setSpreadFactor": {
       "getter": "spreadFactor"
+    },
+    "setIVFactorITM": {
+      "getter": "ivFactorITM"
+    },
+    "setIVFactorOTM": {
+      "getter": "ivFactorOTM"
     }
   },
   "pool": {
