--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,13 @@
-VITE_ENV = MAINNET
-VITE_MODE = production
+VITE_ENV = TESTNET
+VITE_MODE = developement
 BASE_PATH = public
-VITE_WALLET_CONNECT_PROJECT_ID = 0YOUR_PROJECT_ID_FROM_WALLET_CONNECT_CLOUD1
+VITE_WALLET_CONNECT_PROJECT_ID = YOUR_WALLET_CONNECT_CLOUD_PROJECT_ID
+VITE_SIGN_MESSAGE = Sign to verify user address
+VITE_INSTANT_TRADING_HOST = https://instant-trading-api.buffer.finance/instant-trading/
+VITE_INSTANT_TRADING_HOST_DEVELOPMENT = https://api-development-6a7f.up.railway.app/instant-trading/
+VITE_INSTANT_TRADING_HOST_TESTNET =  https://instant-trading-testnet-api.buffer.finance/instant-trading/
+VITE_PRICE_QUERY_HOST = https://oracle.buffer.finance/price/
+VITE_PARTICLE_PROJECT_ID = NOT_NEEDED
+VITE_pARTICLE_APP_ID = NOT_NEEDED
+VITE_PARTICLE_CLIENT_KEY = NOT_NEEDED
+VITE_DEV_ENV = TESTNET
