--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "compile": "lingui compile --typescript"
   },
   "dependencies": {
+    "@binance-chain/bsc-connector": "^1.0.0",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@ethersproject/experimental": "^5.0.1",
+    "@ethersproject/providers": "^5.1.2",
+    "@ethersproject/units": "^5.1.0",
+    "@formkit/auto-animate": "^1.0.0-beta.6",
     "@lingui/macro": "^4.2.0",
     "@lingui/react": "^4.2.0",
     "@mui/core": "^5.0.0-alpha.54",
@@ -25,20 +30,36 @@
     "@rainbow-me/rainbowkit": "^1.0.7",
     "@safe-global/safe-apps-react-sdk": "^4.7.0",
     "@sentry/react": "^7.58.1",
+    "@synthetixio/synpress": "^1.2.0",
     "@szhsin/react-menu": "^3.5.3",
+    "@thirdweb-dev/react": "^3.6.9",
+    "@thirdweb-dev/sdk": "^3.6.9",
     "@vercel/analytics": "^0.1.8",
+    "@wagmi/core": "^1.3.8",
+    "@web3-react/abstract-connector": "latest",
+    "@web3-react/authereum-connector": "latest",
+    "@web3-react/core": "^6.1.9",
+    "@web3-react/injected-connector": "^6.0.7",
+    "@web3-react/walletconnect-connector": "6.2.4",
+    "add": "^2.0.6",
     "axios": "^0.26.0",
     "axios-retry": "^3.3.1",
     "big.js": "^6.1.1",
     "bn.js": "^5.2.0",
     "chrome-tabs": "^5.4.0",
+    "cloudinary": "^1.32.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "ethers": "^5.7.2",
     "ethers-multisend": "^2.4.0",
     "events": "^3.3.0",
+    "flexlayout-react": "0.6.2",
+    "graphql": "^16.6.0",
+    "hex-to-rgba": "2.0.1",
     "html-to-image": "^1.10.8",
     "jotai": "^2.2.2",
     "keen-slider": "^6.8.5",
+    "lightweight-charts": "^3.8.0",
     "network-speed": "^2.1.1",
     "numeral": "^2.0.6",
     "posthog-js": "^1.16.7",
@@ -48,6 +69,7 @@
     "react-detect-offline": "^2.4.5",
     "react-dom": "^18.2.0",
     "react-fetch-streams": "^1.1.2",
+    "react-gravatar": "^2.6.3",
     "react-html-parser": "^2.0.2",
     "react-idle-timer": "^5.5.3",
     "react-joyride": "^2.5.4",
@@ -58,12 +80,14 @@
     "react-transition-group": "^4.4.2",
     "react-use": "^17.4.0",
     "react-use-websocket": "^4.3.1",
+    "recharts": "2.1.10",
     "redux": "^4.1.2",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.0",
     "sass": "^1.43.4",
     "styled-components": "^5.3.3",
     "swr": "^1.3.0",
+    "tailwind-merge": "^1.10.0",
     "viem": "^1.4.2",
     "wagmi": "^1.3.9",
     "web3": "^1.6.1",
