--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@rainbow-me/rainbowkit": "^1.0.7",
     "@safe-global/safe-apps-react-sdk": "^4.7.0",
     "@sentry/react": "^7.58.1",
-    "@sentry/vite-plugin": "^2.9.0",
+    "@sentry/vite-plugin": "^2.14.2",
     "@synthetixio/synpress": "^1.2.0",
     "@szhsin/react-menu": "^3.5.3",
     "@thirdweb-dev/react": "^3.6.9",
@@ -67,6 +67,7 @@
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-bottom-drawer": "^0.1.1",
+    "react-confetti-explosion": "^2.1.2",
     "react-detect-offline": "^2.4.5",
     "react-dom": "^18.2.0",
     "react-fetch-streams": "^1.1.2",
