--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@ethersproject/providers": "^5.1.2",
     "@ethersproject/units": "^5.1.0",
     "@formkit/auto-animate": "^1.0.0-beta.6",
+    "react-confetti": "^6.1.0",
     "@lingui/macro": "^4.2.0",
     "@lingui/react": "^4.2.0",
     "@mui/core": "^5.0.0-alpha.54",
